--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
           <version>3.3.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-compiler----plugin</artifactId>
+          <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
         </plugin>
         <plugin>
